--- a/index.html
+++ b/index.html
@@ -230,6 +230,11 @@
 									    <td width="15%"><b>项目体会</b></td>
 									    <td width="85%">此项目作为学习过程中第一个较为完整的、具有实发意义的项目，从分析用户需求、建立数据库、构建逻辑组件、完成项目编码到测试项目，训练了我站在了系统的高度上观摩系统，始终不忘“大道至简”、“以人为本”。</td>
 									  </tr>
+							       	  	  <tr>
+									    <td width="15%"><b>Git源码</b></td>
+									    <td width="85%"><a href="https://github.com/justmm/mwwProjects/tree/master/CS" class="icon fa-github"><span class="label">https://github.com/justmm/mwwProjects/tree/master/CS</span></a></td>
+									  </tr>
+
 									</table>
 									
 									
