--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 									  </tr>
 							       	  	  <tr>
 									    <td width="15%"><b>Git源码</b></td>
-									    <td width="85%"><a href="https://github.com/justmm/mwwProjects/tree/master/CS" class="icon fa-github"><span class="label">https://github.com/justmm/mwwProjects/tree/master/CS</span></a></td>
+									    <td width="85%"><a href="https://github.com/justmm/mwwProjects/tree/master/CS" >https://github.com/justmm/mwwProjects/tree/master/CS</a></td>
 									  </tr>
 
 									</table>
